<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/beige"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id= "@+id/topBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/brown">
        <RelativeLayout
            android:id="@+id/menu"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true">

            <TextView
                android:text="@string/menu"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@color/beige"
                android:textSize="30dp" />
        </RelativeLayout>
        <TextView
            android:text="@string/logout"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:textColor="@color/beige"
            android:textSize="30dp"
            android:onClick="logoutButton"
            android:clickable="true"/>
    </RelativeLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recorderror"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <View
            android:layout_width="fill_parent"
            android:layout_height="5dp"
            android:background="@color/brown"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <CheckBox android:id="@+id/checkbox_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income"
            android:onClick="onCheckboxClicked"/>

        <CheckBox android:id="@+id/checkbox_bill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/bill"
            android:onClick="onCheckboxClicked"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/recordAmount"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount"
            android:inputType="textEmailAddress" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <View
            android:layout_width="fill_parent"
            android:layout_height="5dp"
            android:background="@color/orange"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_weight="7"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/recordActivity"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/content_spend"
            android:layout_weight="3"
            android:inputType="textEmailAddress" />
        </LinearLayout>

    <Button
        android:id="@+id/recordingButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:background="@drawable/style_button1"/>

</LinearLayout>