<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "@color/beige">


    <RelativeLayout
        android:id= "@+id/topBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/brown">

        <TextView
            android:text="@string/childList"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="6dp"
            android:textColor="@color/beige"
            android:textSize="30dp"
            android:onClick="viewChildList"
            android:clickable="true"/>


        <TextView
            android:text="@string/logout"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:textColor="@color/beige"
            android:textSize="30dp"
            android:onClick="logoutButton"
            android:clickable="true"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"  />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/userName"
            android:textSize="30dp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="30dp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/kidName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"/>

        <Button
            android:id="@+id/addKid"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:onClick="addChild"
            android:textSize="30dp"
            android:textColor="@color/black"
            android:background="@drawable/style_button1"/>

    </LinearLayout>

</LinearLayout>