<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "@color/beige">


    <LinearLayout
        android:id= "@+id/topBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/brown">
        <RelativeLayout
            android:id="@+id/signUp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showRegistration"
            android:clickable="true">

            <TextView
                android:text="@string/signUp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="6dp"
                android:textColor="@color/beige"
                android:textSize="30dp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">
        <TextView
            android:id="@+id/error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:textColor="@color/red"  />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/userName"
            android:textSize="30dp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/userPassword"
            android:textSize="30dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:onClick="signIn"
            android:id="@+id/login"
            android:layout_gravity="center_horizontal"
            android:textSize="30dp"
            android:textColor="@color/black"
            android:background="@drawable/style_button1"/>
        <TextView
            android:id="@+id/forget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:text="@string/forget"
            android:textColor="@color/blue"
            android:onClick="forget"
            android:clickable="true"/>
    </LinearLayout>

</LinearLayout>