<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/beige"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/brown">
        <RelativeLayout
            android:id="@+id/menu"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true">

            <TextView
                android:text="@string/menu"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@color/beige"
                android:textSize="30dp" />
        </RelativeLayout>

        <TextView
            android:text="@string/logout"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:textColor="@color/beige"
            android:textSize="30dp"
            android:onClick="logoutButton"
            android:clickable="true"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="7"
        android:orientation="vertical">
        <EditText
            android:id="@+id/wishAmount"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="Price of the wish item"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/wish"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/wish"
            android:inputType="textEmailAddress" />
    </LinearLayout>
    <Button
        android:id="@+id/submit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/style_button1"
        android:textColor="@color/brown"
        android:textSize="30dp"
        android:onClick="addWish"
        android:text="@string/submit"/>
</LinearLayout>