<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "@color/beige">
    <RelativeLayout
        android:id= "@+id/topBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/brown">
        <RelativeLayout
            android:id="@+id/menu"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true">

            <TextView
                android:text="@string/menu"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@color/beige"
                android:textSize="30dp" />

        </RelativeLayout>
        <TextView
            android:text="@string/logout"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:textColor="@color/beige"
            android:textSize="30dp"
            android:onClick="logoutButton"
            android:clickable="true"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:textColor="@color/red"  />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <View
            android:layout_width="fill_parent"
            android:layout_height="5dp"
            android:background="@color/orange"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/balance"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="30dp" />
        <TextView
        android:id="@+id/currentBalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:textColor="@color/black"  />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <View
            android:layout_width="fill_parent"
            android:layout_height="5dp"
            android:background="@color/orange"/>

    </LinearLayout>


        <Button
            android:id="@+id/recordActivityButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/style_button1"
            android:textColor="@color/brown"
            android:textSize="30dp"
            android:text="@string/recordActivity"/>



        <Button
            android:id="@+id/saveActivityButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/style_button1"
            android:textColor="@color/brown"
            android:textSize="30dp"
            android:text="@string/saveActivity"/>


</LinearLayout>