<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "@color/beige">

    <RelativeLayout
        android:id= "@+id/topBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/brown">
        <RelativeLayout
            android:id="@+id/menu"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true">

            <TextView
                android:text="@string/menu"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@color/beige"
                android:textSize="30dp" />

        </RelativeLayout>

        <TextView
            android:text="@string/logout"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:textColor="@color/beige"
            android:textSize="30dp"
            android:onClick="logoutButton"
            android:clickable="true"/>
    </RelativeLayout>


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize ="20dp"
        android:textColor="@color/red"
        android:id="@+id/mess"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <View
            android:layout_width="fill_parent"
            android:layout_height="5dp"
            android:background="@color/orange"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wishlist"
        android:layout_gravity="center_horizontal"
        android:textSize="30dp"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">
        <ListView
            android:id="@+id/wishs"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
        </ListView>

    </LinearLayout>


    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding="5dp">

        <Button
            android:id="@+id/makeWishActivityButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/style_button1"
            android:textColor="@color/brown"
            android:textSize="30dp"
            android:text="@string/makeWishActivity"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding="5dp">

        <Button
            android:id="@+id/deleteWishActivityButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/style_button2"
            android:textColor="@color/brown"
            android:textSize="30dp"
            android:text="@string/deleteWishActivity"/>

    </RelativeLayout>

</LinearLayout>